@@ -7,7 +7,6 @@ import io.basc.framework.net.InputMessage;
 import io.basc.framework.net.MimeType;
 import io.basc.framework.net.MimeTypeUtils;
 import io.basc.framework.net.OutputMessage;
-import io.basc.framework.util.io.IOUtils;
 
 public class ByteArrayMessageConverter extends ObjectMessageConverter<byte[]> {
 
@@ -18,7 +17,7 @@ public class ByteArrayMessageConverter extends ObjectMessageConverter<byte[]> {
 	@Override
 	protected byte[] read(TypeDescriptor typeDescriptor, MimeType contentType, InputMessage inputMessage)
 			throws IOException {
-		return IOUtils.toByteArray(inputMessage.getInputStream());
+		return inputMessage.readAllBytes();
 	}
 
 	@Override
@@ -29,6 +28,6 @@ public class ByteArrayMessageConverter extends ObjectMessageConverter<byte[]> {
 	@Override
 	protected void write(TypeDescriptor typeDescriptor, byte[] body, MimeType contentType, OutputMessage outputMessage)
 			throws IOException {
-		outputMessage.getOutputStream().write(body);
+		outputMessage.getOutputStream().export().ifPresent((e) -> e.write(body));
 	}
 }
